# battlesnake-starter

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  railway.json
.github/actions/: install_dependencies.yaml
.github/workflows/: pipeline.yaml
src/battlesnake/: main.py  snake.py
tests/: test_snake.py
